<resources>
    <string name="app_name">Wisielec</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="sport">Sport</string>
    <string name="kraj">Państwa</string>
    <string name="zwierzeta">Zwierzęta</string>
    <string name="gang">! GANG ALBANI !</string>
    <string name="kategoria">Wybierz kategorię</string>
    <string name="title_activity_area_game">Area_game</string>

    <color name="black">#1b1716</color>
    <color name="white">#FFFFFF</color>
    <color name="green">#1FE41C</color>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>



</resources>
