<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@color/black">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/kategoria"
        android:textSize="80px"
        android:id="@+id/kat"
        android:padding="40px"
        android:textColor="@color/white"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sport"
        android:onClick="WyborKat"
        android:text="@string/sport"
        android:layout_centerHorizontal="true"
        android:textSize="50px"
        android:layout_below="@+id/kat"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/kraj"
        android:onClick="WyborKat"
        android:text="@string/kraj"
        android:layout_below="@+id/sport"
        android:layout_centerHorizontal="true"
        android:textSize="50px"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/zwierzeta"
        android:onClick="WyborKat"
        android:text="@string/zwierzeta"
        android:layout_below="@+id/kraj"
        android:layout_centerHorizontal="true"
        android:textSize="50px"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gang"
        android:onClick="WyborKat"
        android:text="@string/gang"
        android:layout_below="@+id/zwierzeta"
        android:layout_centerHorizontal="true"
        android:textSize="50px"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dodaj"
        android:text="Dodaj+"
        android:textSize="50px"
        android:onClick="WyborKat"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"

        />

</RelativeLayout>
